Fix excessive gap between input and messages - reduce padding-bottom

--- a/components/componentStyles/textchat.module.css
+++ b/components/componentStyles/textchat.module.css
@@ -56,7 +56,7 @@
   overflow-y: scroll;
   margin-bottom: 0;
   padding-top: 5rem;
-  padding-bottom: 5rem;
+  padding-bottom: 0.5rem;
   position: relative;
   min-height: calc(100vh - 10rem);
 }
